@@ -4,7 +4,7 @@ on_actions = {
 			if = {
 				limit = {
 					has_country_flag = GER_Final_settlement
-					AND = { 
+					AND = {
 							NOT = { has_defensive_war = yes }
 							NOT = { has_country_flag = USoE }
 							has_army_manpower = { size > 240000 }
@@ -694,7 +694,7 @@ on_actions = {
 					    has_government = communism
 					    has_government = nationalist
 					   	}
-						
+
 					}
 				}
 				country_event = {
@@ -729,7 +729,7 @@ on_actions = {
 					    has_government = communism
 					    has_government = nationalist
 					   	}
-						
+
 					}
 				}
 				country_event = {
@@ -878,8 +878,8 @@ on_actions = {
 			}
 			#Fragmentation NAZI
 			if = {
-				limit = { 
-					check_variable = { party_pop_array^20 > 0.03 } 
+				limit = {
+					check_variable = { party_pop_array^20 > 0.03 }
 						NOT = {
 						    OR = {
 						        has_government = communism
@@ -1011,8 +1011,8 @@ on_actions = {
 				}
 			}
 			if = {
-				limit = { 
-					check_variable = { party_pop_array^20 < 0.01 } 
+				limit = {
+					check_variable = { party_pop_array^20 < 0.01 }
 					NOT = {
 					    OR = {
 					        has_government = communism
@@ -1144,7 +1144,7 @@ on_actions = {
 				}
 			}
 			if = {
-				limit = { 
+				limit = {
 					check_variable = { party_pop_array^21 > 0.03 }
 					NOT = {
 					    OR = {
@@ -1277,7 +1277,7 @@ on_actions = {
 				}
 			}
 			if = {
-				limit = { 
+				limit = {
 					check_variable = { party_pop_array^21 < 0.01 }
 					NOT = {
 					    OR = {
@@ -1410,8 +1410,8 @@ on_actions = {
 				}
 			}
 			if = {
-				limit = { 
-					check_variable = { party_pop_array^21 > 0.03 } 
+				limit = {
+					check_variable = { party_pop_array^21 > 0.03 }
 					NOT = {
 					    OR = {
 					        has_government = communism
@@ -1543,8 +1543,8 @@ on_actions = {
 				}
 			}
 			if = {
-				limit = { 
-					check_variable = { party_pop_array^21 < 0.01 } 
+				limit = {
+					check_variable = { party_pop_array^21 < 0.01 }
 					NOT = {
 					    OR = {
 					        has_government = communism
@@ -1678,7 +1678,7 @@ on_actions = {
 
 			#Politics
 			if = {
-				limit = { 
+				limit = {
 					democratic < 0.40
 					NOT = {
 					    OR = {
@@ -1694,8 +1694,8 @@ on_actions = {
 				}
 			}
 			if = {
-				limit = { 
-					democratic < 0.50 
+				limit = {
+					democratic < 0.50
 					NOT = {
 					    OR = {
 					        has_government = communism
@@ -1710,8 +1710,8 @@ on_actions = {
 				}
 			}
 			if = {
-				limit = { 
-					democratic > 0.70 
+				limit = {
+					democratic > 0.70
 					NOT = {
 					    OR = {
 					        has_government = communism
@@ -1726,8 +1726,8 @@ on_actions = {
 				}
 			}
 			if = {
-				limit = { 
-					democratic > 0.80 
+				limit = {
+					democratic > 0.80
 					NOT = {
 					    OR = {
 					        has_government = communism
@@ -1742,8 +1742,8 @@ on_actions = {
 				}
 			}
 			if = {
-				limit = { 
-					neutrality < 0.10 
+				limit = {
+					neutrality < 0.10
 					NOT = {
 					    OR = {
 					        has_government = communism
@@ -1765,35 +1765,23 @@ on_actions = {
 	}
 	on_monthly_GER = {
 		effect = {
-			if = {
-				limit = {
-					has_country_flag = GER_war_on_terror_started
+			if = { limit = { has_country_flag = GER_war_on_terror_started }
+				set_temp_variable_to_random = {
+					var = GER_soldiers_popularity_mideast_change
+					min = 0
+					max = 3
 				}
+				multiply_temp_variable = { GER_soldiers_popularity_mideast_change = -1 }
+
 				random_list = {
 					50 = {
 					}
-					10 = {
-						add_to_variable = { var = GER_soldiers_popularity_mideast value = -1 }
-						clamp_variable = { var = GER_soldiers_popularity_mideast min = 0 max = 100 }
-					}
-					10 = {
-						add_to_variable = { var = GER_soldiers_popularity_mideast value = -2 }
-						clamp_variable = { var = GER_soldiers_popularity_mideast min = 0 max = 100 }
-					}
-					10 = {
-						add_to_variable = { var = GER_soldiers_popularity_mideast value = -3 }
-						clamp_variable = { var = GER_soldiers_popularity_mideast min = 0 max = 100 }
-					}
-					10 = {
-						add_to_variable = { var = GER_soldiers_popularity_mideast value = -4 }
-						clamp_variable = { var = GER_soldiers_popularity_mideast min = 0 max = 100 }
-					}
-					10 = {
-						add_to_variable = { var = GER_soldiers_popularity_mideast value = -5 }
+					50 = {
+						add_to_variable = { var = GER_soldiers_popularity_mideast value = GER_soldiers_popularity_mideast_change }
 						clamp_variable = { var = GER_soldiers_popularity_mideast min = 0 max = 100 }
 					}
 				}
-			}	
+			}
 			# BfV system
 			if = {
 				limit = {
@@ -2178,7 +2166,7 @@ on_actions = {
 
 			#Neutrals balance
 			if = {
-				limit = { 
+				limit = {
 					NOT = {
 					    OR = {
 					        has_government = communism
@@ -2186,8 +2174,8 @@ on_actions = {
 					    }
 					}
 					OR = {
-						check_variable = { party_pop_array^16 < party_pop_array^17 } 
-						check_variable = { party_pop_array^16 = party_pop_array^17 } 
+						check_variable = { party_pop_array^16 < party_pop_array^17 }
+						check_variable = { party_pop_array^16 = party_pop_array^17 }
 					}
 				}
 				random_list = {
@@ -2217,7 +2205,7 @@ on_actions = {
 				}
 			}
 			if = {
-				limit = { 
+				limit = {
 					NOT = {
 					    OR = {
 					        has_government = communism
@@ -2225,8 +2213,8 @@ on_actions = {
 					    }
 					}
 					OR = {
-						check_variable = { party_pop_array^16 > party_pop_array^17 } 
-						check_variable = { party_pop_array^16 = party_pop_array^17 } 
+						check_variable = { party_pop_array^16 > party_pop_array^17 }
+						check_variable = { party_pop_array^16 = party_pop_array^17 }
 					}
 				}
 				random_list = {
@@ -2257,7 +2245,7 @@ on_actions = {
 			}
 			#western balance
 			if = {
-				limit = { 
+				limit = {
 					NOT = {
 					    OR = {
 					        has_government = communism
@@ -2265,8 +2253,8 @@ on_actions = {
 					    }
 					}
 					OR = {
-						check_variable = { party_pop_array^1 < party_pop_array^3 } 
-						check_variable = { party_pop_array^1 = party_pop_array^3 } 
+						check_variable = { party_pop_array^1 < party_pop_array^3 }
+						check_variable = { party_pop_array^1 = party_pop_array^3 }
 					}
 				}
 				random_list = {
@@ -2316,7 +2304,7 @@ on_actions = {
 				}
 			}
 			if = {
-				limit = { 
+				limit = {
 					NOT = {
 					    OR = {
 					        has_government = communism
@@ -2324,8 +2312,8 @@ on_actions = {
 					    }
 					}
 					OR = {
-						check_variable = { party_pop_array^3 > party_pop_array^1 } 
-						check_variable = { party_pop_array^3 = party_pop_array^1 } 
+						check_variable = { party_pop_array^3 > party_pop_array^1 }
+						check_variable = { party_pop_array^3 = party_pop_array^1 }
 					}
 				}
 				random_list = {
