@@ -2190,3 +2190,14 @@ EU_show_display_effects_for_law = {
 		}
 	}
 }
+
+EU_emergency_vote_clear = {
+	set_variable = { global.EUU_recently_failed_vote = global.current_active_vote_disp }
+	set_variable = { global.current_active_vote_disp = 0 }
+	set_variable = { global.EU_active_vote_yes = 0 }
+	set_variable = { global.EU_active_Vote_no = 0 }
+	set_variable = { global.var_EUpopRatioNo = 0 }
+	set_variable = { global.var_EUpopRatioYes = 0 }
+	clear_array = global.EU_active_vote_supporters
+	clear_array = global.EU_active_vote_rejecters
+}
