@@ -1456,7 +1456,7 @@ country_event = {
 				producer = SOV
 			}
 		}
-		CHI = {
+		SOV = {
 			country_event = CZE_airforce_event.3
 			set_temp_variable = { treasury_change = 10 }
 			modify_treasury_effect = yes
