@@ -146,7 +146,7 @@ guiTypes = {
 
 					iconType = {
 						name = "blueprint"
-						spriteType = "GFX_TM_heavy_tank_chassis_gerine_type_slot"
+						spriteType = "GFX_TM_heavy_tank_chassis_engine_type_slot_ger"
 						position = { x=0 y=0 }
 					}
 				}
