@@ -1234,7 +1234,6 @@
  Landeskommando: "Landeskommando"
  Landeskommando_desc: "The Landeskommando is a central command authority of the territorial defense organization of the German Armed Forces in each federal state of Germany. It is stationed in the respective state capital and is responsible for coordinating military assistance in disaster situations. The Landeskommando is composed mostly of non-active units that would be mobilized in the event of a conflict."
 
-#
  GER_Infrastructure: "Verkehrsprojekt Deutsche Einheit"
  VDE_1: "Verkehrsprojekt Deutsche Einheit 1"
  VDE_2: "Verkehrsprojekt Deutsche Einheit 2"
@@ -1274,7 +1273,7 @@
  germany_divide.69420.t: "Advisors Tip"
  germany_divide.69420.d: "It appears that you are a little stuck on how to improve the lives of East Germans! Well, worry not! Everything you need to know has been written in this report. In order to increase the productivity of the states, we will need to build factories, improve our tech, build better network infrastructure, and maintain a steady economic cycle to give jobs to the people. We can also grant them funds to help increase their productivity by 10, but it can get a little costly. Additionally, more infrastructure will help keep East Germans happy."
  germany_divide.69420.a: "Okay"
-#
+
  GER_bavarian_nationalism: "[BAY.GetFlag] Bavarian Nationalism"
  GER_bavarian_nationalism_desc: "Some [BAY.GetFlag] §HBavarian's§! have been vying for independence ever since the creation of an unified [GER.GetFlag] German state. Many [BAY.GetFlag] §HBavarian's§! accuse the [GER.GetFlag] German government of intruding their autonomy, and therefore, §Hnationalism§! has risen in the region. [BAY.GetFlag] §HBavaria§! is one of our more important regions as it hosts quite a lot of tourists every year, and it's one of our more wealthier areas.\n\n[BAY.GetFlag] §HBavarian nationalism§! will grow only when our economy is weakened. If our economy is in a §Rstagnation, recession§! or a §Rdepression§!, there is a §H40%§! chance that [BAY.GetFlag] §HBavarian nationalism§! will grow by §H1%§! at the end of each week as a result of [BAY.GetFlag] §HBavarian§! anger. If we have §Hfast growth§! or §Heconomic boom§!, [BAY.GetFlag] §HBavarian Nationalism§! will naturally come down.\n\nOnce [BAY.GetFlag] §HBavarian nationalism§! reaches §H100%§!, they will demand independence."
  GER_establish_ruling_party: "Establish a Ruling Party"
@@ -1329,9 +1328,9 @@
  GER_purge_military_desc: "By purging the military, we will be able to save our armed forces from radical groups."
  GER_incoming_collapse: "The German Civil War"
  GER_incoming_collapse_desc: "The Republican will fade, but the German nation will not.."
-#
+
  GER_war_on_terror: "German War on Terror"
- GER_war_on_terror_desc: "We have committed our §Hsoldiers, resources, and nation§! to fighting against §RTerrorism§! in [AFG.GetFlag] §HAfghanistan§!.\n\nWith our allies and other collaboraters, we will have the capacity to carry out §Hmissions§! on foreign soil to push out §Rterrorists§! out of the target nations. We will have a certain amount of troops we can deploy to fight against §Rterrorism§!, and we can gain influence in [AFG.GetFlag] §HAfghanistan§! based on our forces §HPopularity§!. Alongside the influence, we will be able to help maintain a good status on §HDepartment 6§!, if the §HBfV§! has not collapsed.\n\n If we have more than §H50% Popularity§!, we will get massive bonuses to our military. Additionally, the bonuses will increase as our Forces §HPopularity§! increases. At the end of our mission, which will come randomly, our forces will get a §Gpositive§! national spirit as a result of the many experiences in [AFG.GetFlag] §HAfghanistan§!. This spirit will only be made available if we have §H75%§! or more §HPopularity§!. Every month, there is a §Hchance§! that our popularity will §Rdrop§! by anywhere from §H1-5!§!\n\nWe currently have §Y[?GER_soldiers_in_mideast]§! Troops deployed in [AFG.GetFlag] §HAfghanistan§!.\nOur §HPopularity§! amongst their citizens is currently at §Y[?GER_soldiers_popularity_mideast]%§!"
+ GER_war_on_terror_desc: "We have committed our §Hsoldiers, resources, and nation§! to fighting against §RTerrorism§! in [AFG.GetFlag] §HAfghanistan§!.\n\nWith our allies and other collaboraters, we will have the capacity to carry out §Hmissions§! on foreign soil to push out §Rterrorists§! out of the target nations. We will have a certain amount of troops we can deploy to fight against §Rterrorism§!, and we can gain influence in [AFG.GetFlag] §HAfghanistan§! based on our forces §HPopularity§!. Alongside the influence, we will be able to help maintain a good status on §HDepartment 6§!, if the §HBfV§! has not collapsed.\n\n If we have more than §H50% Popularity§!, we will get massive bonuses to our military. Additionally, the bonuses will increase as our Forces §HPopularity§! increases. At the end of our mission, which will come randomly, our forces will get a §Gpositive§! national spirit as a result of the many experiences in [AFG.GetFlag] §HAfghanistan§!. This spirit will only be made available if we have §H75%§! or more §HPopularity§!. Every month, there is a §Hchance§! that our popularity will §Rdrop§! by anywhere from §H1-3!§!\n\nWe currently have §Y[?GER_soldiers_in_mideast]§! Troops deployed in [AFG.GetFlag] §HAfghanistan§!.\nOur §HPopularity§! amongst their citizens is currently at §Y[?GER_soldiers_popularity_mideast]%§!"
  GER_authorize_attack: "Authorize an Attack against Terrorist Bases"
  GER_authorize_attack_desc: "We can authorize an attack against known terrorist bases to push out terrorist groups, as well as improve our effectiveness."
  GER_authorize_airstrike: "Authorize an Airstrike"
@@ -1371,7 +1370,7 @@
  GER_Launch_big_Trainings_exercise: "Launch a over Regional training Exercise"
  GER_Launch_big_Trainings_exercise_desc: "An Over-Regional Training Exercise involving four Bundeswehr brigades is a more complex and expansive military operation that spans multiple regions of Germany. This exercise tests the ability of larger formations to conduct joint operations across different terrains and environments, integrating air, land, and logistical support. With four brigades participating, the exercise aims to enhance large-scale coordination, strategic mobility, and the integration of various military capabilities. It also serves as a platform for evaluating the effectiveness of command structures and the interoperability between different Bundeswehr units."
 
-### Events
+ ### Events
  germany_party.0.t: "The Rise of AfD"
  germany_party.0.d: "Dissatisfaction related to the costs of our European policy has led to the fact that the support of the population began to enjoy the parties that are skeptical of the European Union, like a new right-wing party  £GER_nationalist_right_wing_populist Alternative for Germany. The AfD favors less EU influence and a stronger national economy through deregulation and spending cuts. However, the more radical wing is gaining strength inside of the party which sympathetic to nationalist ideas and opposed to migration and many practices of liberal democracy. Although the party does not yet have extensive resources, many analysts say that potential support for the party could increase quite quickly."
  germany_party.0.a: "BfV will watch them closely."
