@@ -41,6 +41,7 @@ v1.12.0
   - China no longer starts with 2025 Light Guns technologies for ships
   - Increased SAM air superiority per wing from 5 to 15.
   - Added a 2% boost to Air-Ground-Attack on the BBA radar upgrade, to represent ground search radars
+  - Made the German Soldiers Popularity mechanic for the War on Terror a little more random but a little easier to manage
 
  Bugfix:
   - Fixed a German MIO giving piercing despite Small Arms not having Piercing
@@ -173,6 +174,7 @@ v1.12.0
   - North Korea no longer can use the "Hold Elections" decision
   - Added vanilla (non-DLC) starting techs Israel was missing
   - Adjusted the maximum number of quick wings for deployment from 3 to 8
+  - Added a new scripted effect to clear the EU vote variables when a vote fails to cleanup (effect is called EU_emergency_vote_clear)
 
  Graphics:
   - Fixed the "Combined Defense Industries" idea icon from missing from the generic ideas
